--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
 * { box-sizing:border-box; }
-html { background-color:#222; }
-body { margin:0; font-family:arial; color:var(--font-color); }
+body { margin:0; font-family:arial; color:var(--font-color); background-color:var(--bg-color); }
 
 :root {
   --color-d:#ddd;
@@ -48,7 +47,7 @@ a, a:visited { color:var(--color-lnk); }
 .container { width:100%; max-width:1260px; margin:0 auto; }
 .page-content { padding:15px; background:var(--bg-color); padding-bottom:50px; }
 .footer .container { background:linear-gradient(to right,var(--grad-color3),var(--grad-color3),var(--grad-color4)); padding:40px 15px 80px; color:var(--color-d); position:relative; }
-.footer div.moon { background:url(/img/moono.png) no-repeat; background-size:320px; width:240px; height:360px; position:absolute; right:0px; top:-60px; }
+.footer div.moon { background:url(/img/moono.png) no-repeat; background-size:120px; width:90px; height:120px; position:absolute; right:0px; top:-60px; }
 /*
 .fa-sun  { display:inline-block; width:20px; height:20px; background:url(/img/svg/sun.svg); }
 .fa-moon { display:inline-block; width:20px; height:20px; background:url(/img/svg/moon.svg); }
@@ -77,7 +76,7 @@ a, a:visited { color:var(--color-lnk); }
 .action-bar { background: linear-gradient(var(--grad-color1) 50%, var(--grad-color2) 50%, var(--grad-color1)); padding:10px; }
 
 /* .moonwalk */
-.moonwalk { border:1px solid var(--border-color); padding:10px; margin:4px; border-radius:5px; }
+.moonwalk { border:1px solid var(--border-color); padding:10px; margin:4px -15px; border-radius:5px; }
 .moonwalk .title { font-size:1.7em; }
 .moonwalk .published { font-size:0.8em; }
 
@@ -110,5 +109,6 @@ pre { padding:15px; margin:0 -12px; }
 @media (min-width: 580px) {
   .message-list { margin:0; }
   .message { border-top:0px solid var(--border-color); padding:0 0 20px; margin:0 0 0 60px; max-width:800px; }
+  .moonwalk { margin:4px 0; }
   .moonwalk .published { font-size:0.8em; float:right; }
 }
